[#437] Fix css to scss (#438)
* [#437] Fix css to scss
1. css 처리를 scss에 맞게 수정
2. grid 관련 theme 별 컬럼값 정의

* [#437] Fix using mixin truncate
1. 말줄임 처리 관련 부분을 mixin을 사용하도록 수정

--- a/src/styles/themes/variables.scss
+++ b/src/styles/themes/variables.scss
@@ -2,7 +2,7 @@
 
 $ev-themes: (
   light: (
-    font-color-base: $color-white,
+    font-color-base: $color-black,
 
     /* button
     -------------------------- */
@@ -20,6 +20,14 @@ $ev-themes: (
     /* window
     -------------------------- */
     window-bg: $color-white,
+
+    /* grid
+    -------------------------- */
+    grid-header-border: #545965,
+    grid-bottom-border: #C9CFDC,
+    grid-row-selected: #E3E7F0,
+    grid-cell-text: #797E8A,
+
   ),
   dark: (
     font-color-base: $color-white,
@@ -40,6 +48,13 @@ $ev-themes: (
     /* window
     -------------------------- */
     window-bg: $color-dark-level2,
+
+    /* grid
+    -------------------------- */
+    grid-header-border: #797E8A,
+    grid-bottom-border: #545965,
+    grid-row-selected: #797E8A,
+    grid-cell-text: #C9CFDC,
 
   ),
 ) !default;
